--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "nock": "^12.0.3",
     "nodemon": "^2.0.3",
     "prettier": "^1.15.3",
-    "prettier-eslint": "^8.8.2",
-    "supertest": "^4.0.2"
+    "prettier-eslint": "^8.8.2"
   }
 }
