--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "lint-fix": "npm run lint -- --fix",
     "graphql-schema-inspector": "graphql-inspector-wolox-node -o schema.graphql -n app/graphql",
     "outdated": "npm outdated --depth 0",
-    "precommit": "npm run lint",
     "start-dev": "nodemon --inspect server.js",
     "start": "node server.js"
   },
@@ -87,5 +86,11 @@
     "nodemon": "^2.0.3",
     "prettier": "^1.15.3",
     "prettier-eslint": "^8.8.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-diff",
+      "pre-push": "npm test"
+    }
   }
 }
