--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "card-game-graphql",
   "engines": {
-    "node": "10.14.2",
-    "npm": "6.4.1"
+    "node": "12.16.3",
+    "npm": "6.14.4"
   },
   "scripts": {
     "cover": "npm run test -- --coverage",
@@ -43,11 +43,11 @@
     "collectCoverageFrom": [
       "app/**/*.js",
       "!**/node_modules/**",
-      "!**/build/**",
       "!**/config/**",
-      "!**/scripts/**",
       "!app/graphql/index.js",
-      "!app/graphql/schemaImport.js"
+      "!app/graphql/schemaImport.js",
+      "!app/errors.js",
+      "!app/logger.js"
     ],
     "testEnvironment": "node",
     "transform": {
