--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cover": "npm run test -- --coverage",
     "test": "NODE_ENV=testing jest test/app --runInBand --forceExit --detectOpenHandles",
     "test-inspect": "NODE_ENV=testing node --inspect --debug-brk jest",
+    "coveralls": "npm run cover && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint \"**/*.js\" --ignore-pattern ./.eslintrc.js",
     "lint-diff": "git diff --diff-filter=ACM --name-only --cached --relative | grep \\\\.js$ | xargs eslint",
     "lint-fix": "npm run lint -- --fix",
@@ -71,6 +72,7 @@
     "babel-eslint": "^8.2.2",
     "babel-jest": "^24.8.0",
     "babel-preset-es2015": "6.24.1",
+    "coveralls": "^3.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^12.0.2",
